--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/passing-task-387222/packer@sha256:70f7e85e09130a466b1bf3c66dccd9ab7ad0699d9646abb7f5f8e2f3eb0a191a', '.' ]
+  args: [ 'build', '-t', 'gcr.io/passing-task-387222/packer:1.7.8', '.' ]
 
-images: [gcr.io/passing-task-387222/packer@sha256:70f7e85e09130a466b1bf3c66dccd9ab7ad0699d9646abb7f5f8e2f3eb0a191a]
+images: [gcr.io/passing-task-387222/packer:1.7.8]
 
