--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
   args: 
     - run
     - --filename=ops/deployment.yaml
-    - --iamge=gcr.io/passing-task-387222/packer:1.7.8
+    - --image=gcr.io/passing-task-387222/packer:1.7.8
     - --location=australia-southeast1
     - --cluster=cluster-2
   
