--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,9 +6,10 @@ steps:
   args: 
     - run
     - --filename=restaurantservice-deployment.yaml
+    - --filename=restaurantservice-service.yaml
     - --image=gcr.io/passing-task-387222/packer:1.7.8
     - --location=australia-southeast1
-    - --cluster=cluster2
+    - --cluster=restaurantcluster
   
 
 
